# toy

./: Cargo.toml
service/: Cargo.toml
service-cli/: Cargo.toml
service-cli/src/: main.rs
service/src/: application.rs  lib.rs
service/src/core/: account.rs  feed.rs  mod.rs
