[package]
name = "service"
version = "0.1.0"
authors = ["LK <lk@overdb.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "signal"] }
async-trait = "0.1"
anyhow = "1.0"
csv-async = {version = "1.2", features = ["tokio", "with_serde"]}
num_cpus = "1.13.0"
tokio-stream = "0.1.6"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4.14"
